fixing typo at aboutme

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
         <section class="about-text">
           <p>
             I'm master student at KAIST, Rep. of Korea.
-            I'm computer science enthusiastist, enjoying turning challenging problems through simple, beautiful and intuitive idea.
+            I'm computer science enthusiastist, enjoying solving challenging problems through simple, beautiful and intuitive idea.
           </p>
 
           <p>
@@ -882,7 +882,7 @@
         <section class="about-text">
           <p>
             I'm master student at KAIST, Rep. of Korea.
-            I'm computer science enthusiastist, enjoying turning challenging problems through simple, beautiful and intuitive idea.
+            I'm computer science enthusiastist, enjoying solving challenging problems through simple, beautiful and intuitive idea.
           </p>
 
           <p>
