--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
               <span>Sep. 2022 — Current</span>
 
               <p class="timeline-text">
-                School of Computing
+                School of Computing, <i>GPA: 4.22/4.3</i>
               </p>
 
             </li>
@@ -362,6 +362,18 @@
           </div>
 
           <ol class="timeline-list">
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">도메인 일반화에서 스타일 매니폴드를 고려한 공분산 기반 스타일 증강기법</h4>
+
+              <p class="timeline-text">
+                <b>WooJung Son</b>, Yoonki Cho, Sungeui Yoon*<br/>
+                한국정보과학회 한국컴퓨터종합학술대회 2023
+              </p>
+              <span class="badge-red">Excellence Paper Award</span>
+
+            </li>
 
             <li class="timeline-item">
 
@@ -611,7 +623,7 @@
               <span>Sep. 2022 — 현재</span>
 
               <p class="timeline-text">
-                전산학부
+                전산학부, <i>4.22/4.3</i>
               </p>
 
             </li>
@@ -723,6 +735,18 @@
           </div>
 
           <ol class="timeline-list">
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">도메인 일반화에서 스타일 매니폴드를 고려한 공분산 기반 스타일 증강기법</h4>
+
+              <p class="timeline-text">
+                <b>손우정</b>, 조윤기, 윤성의*<br/>
+                한국정보과학회 한국컴퓨터종합학술대회 2023
+              </p>
+              <span class="badge-red">우수논문상</span>
+
+            </li>
 
             <li class="timeline-item">
 
