add youtube, github, projects, edit introduction

--- a/index.html
+++ b/index.html
@@ -128,22 +128,22 @@
         <ul class="social-list">
 
           <li class="social-item">
-            <a href="#" class="social-link">
+            <a href="https://www.youtube.com/@woojungson" class="social-link">
+              <ion-icon name="logo-youtube"></ion-icon>
+            </a>
+          </li>
+
+          <li class="social-item">
+            <a href="https://www.github.com/woojung-son" class="social-link">
+              <ion-icon name="logo-github"></ion-icon>
+            </a>
+          </li>
+
+          <!-- <li class="social-item">
+            <a href="https://www.facebook.com/profile.php?id=100014541823093" class="social-link">
               <ion-icon name="logo-facebook"></ion-icon>
             </a>
-          </li>
-
-          <li class="social-item">
-            <a href="#" class="social-link">
-              <ion-icon name="logo-twitter"></ion-icon>
-            </a>
-          </li>
-
-          <li class="social-item">
-            <a href="#" class="social-link">
-              <ion-icon name="logo-instagram"></ion-icon>
-            </a>
-          </li>
+          </li> -->
 
         </ul>
 
@@ -220,14 +220,13 @@
 
         <section class="about-text">
           <p>
-            I'm master student at KAIST, Rep. of Korea.
-            I'm computer science enthusiastist, enjoying solving challenging problems through simple, beautiful and intuitive idea.
+            I'm a master's student at KAIST, Rep. of Korea. 
+            I'm a computer science enthusiastist who enjoys solving challenging problems through simple, beautiful and intuitive idea.
           </p>
 
           <p>
             My research topic is computer vision and machine learning.
-            To be specific, what I'm interested in is the research field of domain adaptation, genearlization in computer vision,
-            which is to solve the model not to be biased against domain shift environment.
+            To be more specific, I'm focused on domain adaptation, domain generalization for computer vision to train the model not to be biased against the domain shift.
           </p>
         </section>
 
@@ -309,7 +308,7 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Base Co.</h4>
+              <h4 class="h4 timeline-item-title">Vinple Co.</h4>
 
               <span>Jan. 2019 — Feb. 2019</span>
 
@@ -485,13 +484,13 @@
 
             </li>
 
-            <li class="timeline-item">
+            <!-- <li class="timeline-item">
 
               <h4 class="h4 timeline-item-title">TOEIC 850 / OPIC IH</h4>
 
               <span>May. 2021 / May. 2020</span>
 
-            </li>
+            </li> -->
 
             <li class="timeline-item">
 
@@ -514,6 +513,226 @@
               <h4 class="h4 timeline-item-title">SW Best Talent Scholarship</h4>
 
               <span>Dec. 2021</span>
+
+            </li>
+
+          </ol>
+
+        </section>
+
+        <section class="timeline">
+
+          <div class="title-wrapper">
+            <div class="icon-box">
+              <ion-icon name="book-outline"></ion-icon>
+            </div>
+
+            <h3 class="h3">Projects</h3>
+          </div>
+
+          <ol class="timeline-list">
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Sentiment Analyzer</h4>
+
+              <span>Jan. 2022 — Feb. 2022</span>
+
+              <p class="timeline-text">
+                Towards optimal datasets, model architecture for sentiment analyzer.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Counting Beans</h4>
+
+              <span>Nov. 2021 — Dec. 2021</span>
+
+              <p class="timeline-text">
+                Project for intramural kaggle. Predicting the number of beans in a plate as accurately as possible.(prize)
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Education Outreach Platform</h4>
+
+              <span>Jan. 2021 — Feb. 2021</span>
+
+              <p class="timeline-text">
+                Project at the hackathon by Union of S/W Universities. Education platform for both volunteers and beneficiaries. Automatically generating quizzes given class materials using question generating AI.(prize)
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Physico Therapy Assistant</h4>
+
+              <span>Oct. 2020 — Oct. 2021</span>
+
+              <p class="timeline-text">
+                Developing AI assistant which gets voice of the client as an input and visualizes the flow of emotion change of client.(prize)
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">RNA-Protein Interaction</h4>
+
+              <span>Apr. 2020 — Oct. 2020</span>
+
+              <p class="timeline-text">
+                Graduation research. Predicting the interaction between RNA and protein using ML.(prize)
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">De-identification</h4>
+
+              <span>Oct. 2020 — Oct. 2020</span>
+
+              <p class="timeline-text">
+                Project at 2020 Cyber security challenge. Developing algorithm for de-identificating data from mobile carrier.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Web Application Firewall(WAF) for apache server</h4>
+
+              <span>Aug. 2020 — Aug. 2020</span>
+
+              <p class="timeline-text">
+                Project at BoB. Developing WAF for apach server which can defend cross site script(xss), directory traversal.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Web Fuzzing Attacker</h4>
+
+              <span>Jul. 2020 — Aug. 2020</span>
+
+              <p class="timeline-text">
+                Project at BoB. Developing web fuzzer which can do cross-site script, sql injection, and directory traversal.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">ARP Spoofing Attacker</h4>
+
+              <span>Jul. 2020 — Aug. 2020</span>
+
+              <p class="timeline-text">
+                Spoofing arp packet to cut off or relay the connection between sender and target.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Website Outsourcing</h4>
+
+              <span>Sep. 2019 — Apr. 2020</span>
+
+              <p class="timeline-text">
+                Project at XenMedia Inc. Developing websites which client companies request.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Intra Storage Platform</h4>
+
+              <span>Sep. 2019 — Apr. 2020</span>
+
+              <p class="timeline-text">
+                Project at Xenmedia Inc. Developing intra storage platform. 
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Your Website is outdated</h4>
+
+              <span>Sep. 2019 — Apr. 2020</span>
+
+              <p class="timeline-text">
+                Project at XenMedia Inc. Developing proposal of website for companies whose website is ragged.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Vinple Website</h4>
+
+              <span>Jan. 2019 — Feb. 2019</span>
+
+              <p class="timeline-text">
+                Project at Vinple Co. Developing Vinple's website.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Maze game</h4>
+
+              <span>Sep. 2021 — Dec. 2021</span>
+
+              <p class="timeline-text">
+                Maze game which supports wall-moving, secret-route using STM32 board.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Android Foodtruck Application</h4>
+
+              <span>Mar. 2019 — Jun. 2019</span>
+
+              <p class="timeline-text">
+                Developing foodtruck platform which can connect owners and customers which operates on android operating system.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Doorlock</h4>
+
+              <span>Sep. 2018 — Dec. 2018</span>
+
+              <p class="timeline-text">
+                Developing doorlock which supports administrative mode, dummy number, OTP, controlling the number of available trials for incorrect input using FPGA board. 
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Smart air conditional</h4>
+
+              <span>Mar. 2018 — Jun. 2018</span>
+
+              <p class="timeline-text">
+                Making air-conditional which can automatically control the direction of wind by detecting human using Arduino.
+              </p>
 
             </li>
 
@@ -682,7 +901,7 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Base Co.</h4>
+              <h4 class="h4 timeline-item-title">Vinple Co.</h4>
 
               <span>Jan. 2019 — Feb. 2019</span>
 
@@ -887,6 +1106,226 @@
               <h4 class="h4 timeline-item-title">교내 SW최고등급인재 장학금</h4>
 
               <span>Dec. 2021</span>
+
+            </li>
+
+          </ol>
+
+        </section>
+
+        <section class="timeline">
+
+          <div class="title-wrapper">
+            <div class="icon-box">
+              <ion-icon name="book-outline"></ion-icon>
+            </div>
+
+            <h3 class="h3">프로젝트</h3>
+          </div>
+
+          <ol class="timeline-list">
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">AI 감정분석기</h4>
+
+              <span>Jan. 2022 — Feb. 2022</span>
+
+              <p class="timeline-text">
+                AI 감정분석기를 위한 최적의 데이터셋, 아키텍처에 대해 연구한 프로젝트
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">콩 세는 밤</h4>
+
+              <span>Nov. 2021 — Dec. 2021</span>
+
+              <p class="timeline-text">
+                교내 캐글대회 프로젝트. 접시에 놓인 콩의 개수를 가능한 정확하게 맞추는 프로젝트(수상작)
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">해외봉사 플랫폼</h4>
+
+              <span>Jan. 2021 — Feb. 2021</span>
+
+              <p class="timeline-text">
+                소프트웨어 중심대학 연합해커톤 프로젝트. 봉사자와 수혜자를 위한 교육플랫폼. 질문 생성 AI를 이용해 교육자료를 바탕으로 적절한 문제를 자동으로 출제하는 기능이 탑재되어 있음.(수상작)
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">AI 심리상담사</h4>
+
+              <span>Oct. 2020 — Oct. 2021</span>
+
+              <p class="timeline-text">
+                내담자의 발화를 입력으로 받아 감정의 흐름을 시각적으로 보여주는 AI 심리상담사 프로젝트.(수상작)
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">RNA-단백질 상호작용</h4>
+
+              <span>Apr. 2020 — Oct. 2020</span>
+
+              <p class="timeline-text">
+                졸업연구. ML기법을 사용해 RNA와 단백질간의 상호작용을 예측함.(수상작)
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">개인정보 비식별화</h4>
+
+              <span>Oct. 2020 — Oct. 2020</span>
+
+              <p class="timeline-text">
+                2020 사이버시큐리티챌린지 프로젝트. 이동통신사 데이터를 비식별화하는 알고리즘 개발.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">아파치서버 웹방화벽</h4>
+
+              <span>Aug. 2020 — Aug. 2020</span>
+
+              <p class="timeline-text">
+                BoB 프로젝트. Cross-site script(xss), 디렉터리 순회 공격을 방어할 수 있는 아파치서버 웹방화벽 개발 프로젝트.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">웹퍼징 공격기</h4>
+
+              <span>Jul. 2020 — Aug. 2020</span>
+
+              <p class="timeline-text">
+                BoB 프로젝트. Cross-site script, SQl 인젝션, 디렉터리 순회 공격이 가능한 웹퍼징 공격기 개발.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">ARP 스푸핑 공격기</h4>
+
+              <span>Jul. 2020 — Aug. 2020</span>
+
+              <p class="timeline-text">
+                BoB 프로젝트. ARP 패킷을 스푸핑하여 연결을 끊거나, 중간자공격이 가능한 ARP 스푸핑 공격기 개발.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">고객사 웹사이트 수주</h4>
+
+              <span>Sep. 2019 — Apr. 2020</span>
+
+              <p class="timeline-text">
+                Xen Media(주) 프로젝트. 고객사의 웹사이트를 수주받아 개발 기여.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">사내 저장플랫폼 개발</h4>
+
+              <span>Sep. 2019 — Apr. 2020</span>
+
+              <p class="timeline-text">
+                Xen Media(주) 프로젝트. 사내 데이터 저장을 위한 플랫폼 개발.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">웹사이트 프로포절</h4>
+
+              <span>Sep. 2019 — Apr. 2020</span>
+
+              <p class="timeline-text">
+                Xen Media(주) 프로젝트. 웹사이트가 오래된 회사를 대상으로 한 웹사이트 리뉴얼 제안 프로젝트
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Vinple 웹사이트</h4>
+
+              <span>Jan. 2019 — Feb. 2019</span>
+
+              <p class="timeline-text">
+                Vinple사 프로젝트. Vinple사 웹사이트 개발 기여.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">미로게임</h4>
+
+              <span>Sep. 2021 — Dec. 2021</span>
+
+              <p class="timeline-text">
+                벽 이동, 비밀통로 기능을 탑재한 STM32보드 기반 미로게임.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">푸드트럭 앱</h4>
+
+              <span>Mar. 2019 — Jun. 2019</span>
+
+              <p class="timeline-text">
+                업주와 고객을 이어주는 푸드트럭 앱 개발. 안드로이드 운영체제에서 동작.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">도어락</h4>
+
+              <span>Sep. 2018 — Dec. 2018</span>
+
+              <p class="timeline-text">
+                관리자모드, 더미숫자, OTP, 비밀번호 오류횟수 제한 기능을 탑재한 FPGA보드 기반 도어락.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">스마트 에어컨</h4>
+
+              <span>Mar. 2018 — Jun. 2018</span>
+
+              <p class="timeline-text">
+                사람을 인식해 바람의 방향을 자동으로 바꾸어주는 아두이노 기반 스마트 에어컨.
+              </p>
 
             </li>
 
