remove english test score written in korean section

--- a/index.html
+++ b/index.html
@@ -1077,13 +1077,13 @@
 
             </li>
 
-            <li class="timeline-item">
+            <!-- <li class="timeline-item">
 
               <h4 class="h4 timeline-item-title">토익 850 / 오픽 IH</h4>
 
               <span>May. 2021 / May. 2020</span>
 
-            </li>
+            </li> -->
 
             <li class="timeline-item">
 
