--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
               <span>Sep. 2022 — Current</span>
 
               <p class="timeline-text">
-                School of Computing, <i>GPA: 4.22/4.3</i>
+                School of Computing
               </p>
 
             </li>
@@ -842,7 +842,7 @@
               <span>Sep. 2022 — 현재</span>
 
               <p class="timeline-text">
-                전산학부, <i>4.22/4.3</i>
+                전산학부
               </p>
 
             </li>
