--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
               <span>Sep. 2022 — Current</span>
 
               <p class="timeline-text">
-                School of Computing
+                School of Computing, <i>4.24/4.3</i>
               </p>
 
             </li>
@@ -281,6 +281,18 @@
           </div>
 
           <ol class="timeline-list">
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">SGVRLab@KAIST</h4>
+
+              <span>Apr. 2022 — Aug. 2022</span>
+
+              <p class="timeline-text">
+                Research Intern, Research theme: Domain Generalization
+              </p>
+
+            </li>
 
             <li class="timeline-item">
 
@@ -842,7 +854,7 @@
               <span>Sep. 2022 — 현재</span>
 
               <p class="timeline-text">
-                전산학부
+                전산학부, <i>4.24/4.3</i>
               </p>
 
             </li>
@@ -874,6 +886,18 @@
           </div>
 
           <ol class="timeline-list">
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">대용량 그래픽스 연구실 @ 한국과학기술원</h4>
+
+              <span>Apr. 2022 — Aug, 2022</span>
+
+              <p class="timeline-text">
+                연구인턴, 주제: 도메인 일반화
+              </p>
+
+            </li>
 
             <li class="timeline-item">
 
