--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
               <span>Sep. 2022 — Current</span>
 
               <p class="timeline-text">
-                School of Computing, <i>4.24/4.3</i>
+                School of Computing
               </p>
 
             </li>
@@ -282,7 +282,7 @@
 
           <ol class="timeline-list">
 
-            <li class="timeline-item">
+            <!-- <li class="timeline-item">
 
               <h4 class="h4 timeline-item-title">SGVRLab@KAIST</h4>
 
@@ -292,7 +292,7 @@
                 Research Intern, Research theme: Domain Generalization
               </p>
 
-            </li>
+            </li> -->
 
             <li class="timeline-item">
 
@@ -379,7 +379,7 @@
               <h4 class="h4 timeline-item-title">도메인 일반화에서 스타일 매니폴드를 고려한 공분산 기반 스타일 증강기법</h4>
 
               <p class="timeline-text">
-                <b>WooJung Son</b>, Yoonki Cho, Sungeui Yoon*<br/>
+                <b>WooJung Son</b> <br/>
                 한국정보과학회 한국컴퓨터종합학술대회 2023
               </p>
               <span class="badge-red">Excellence Paper Award</span>
@@ -854,7 +854,7 @@
               <span>Sep. 2022 — 현재</span>
 
               <p class="timeline-text">
-                전산학부, <i>4.24/4.3</i>
+                전산학부
               </p>
 
             </li>
@@ -887,7 +887,7 @@
 
           <ol class="timeline-list">
 
-            <li class="timeline-item">
+            <!-- <li class="timeline-item">
 
               <h4 class="h4 timeline-item-title">대용량 그래픽스 연구실 @ 한국과학기술원</h4>
 
@@ -897,7 +897,7 @@
                 연구인턴, 주제: 도메인 일반화
               </p>
 
-            </li>
+            </li> -->
 
             <li class="timeline-item">
 
@@ -984,7 +984,7 @@
               <h4 class="h4 timeline-item-title">도메인 일반화에서 스타일 매니폴드를 고려한 공분산 기반 스타일 증강기법</h4>
 
               <p class="timeline-text">
-                <b>손우정</b>, 조윤기, 윤성의*<br/>
+                <b>손우정</b> <br/>
                 한국정보과학회 한국컴퓨터종합학술대회 2023
               </p>
               <span class="badge-red">우수논문상</span>
