edit about and add covid19 project

--- a/index.html
+++ b/index.html
@@ -225,8 +225,9 @@
           </p>
 
           <p>
-            My research topic is computer vision and machine learning.
-            To be more specific, I'm focused on domain adaptation, domain generalization for computer vision to train the model not to be biased against the domain shift.
+            My research topic is related to AI(Artificial intelligence), focusing on computer vision and machine learning.
+            To be specific, my research interests lie in the field of domain adaptation and generalization in computer vision. 
+            The goal is to solve the issue of models becoming biased due to shifts in the domain environment.
           </p>
         </section>
 
@@ -594,6 +595,20 @@
 
             <li class="timeline-item">
 
+              <h4 class="h4 timeline-item-title">Anonymous KI-PASS(Korea Internet Pass) System for COVID19</h4>
+
+              <span>Sep. 2020 — Dec. 2020</span>
+
+              <p class="timeline-text">
+                Project to improve the current contact tracing pipeline for COVID-19, which has raised issues of human rights and privacy infringement. 
+                Our epidemiological investigation system ensures the anonymity of the individuals whose personal information is involved in the investigation. 
+                The system incorporates an encryption method based on the BBS (Boneh-Boyen-Shacham) group signature, as proposed in our paper.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
               <h4 class="h4 timeline-item-title">RNA-Protein Interaction</h4>
 
               <span>Apr. 2020 — Oct. 2020</span>
@@ -829,7 +844,7 @@
           </p>
 
           <p>
-            제 연구주제는 컴퓨터가 이미지 및 시각적 정보를 어떻게 받아들이는지에 대해 연구하는 컴퓨터비전과, 인공지능 모델로 하여금 이러한 시각적 정보를 학습하게 하는 기계학습입니다.
+            제 연구주제는 인공지능의 분야 중에서, 컴퓨터가 이미지 및 시각적 정보를 어떻게 받아들이는지에 대해 연구하는 컴퓨터비전과, 인공지능 모델로 하여금 이러한 시각적 정보를 학습하게 하는 기계학습입니다.
             조금 더 구체적으로 말하자면, 컴퓨터비전에서의 도메인 적응, 도메인 일반화에 대한 것을 다룹니다.
             도메인이 변화하는 환경에서 편향되지 않는 모델을 학습하는 것에 목표를 두고 있습니다.
           </p>
@@ -1199,6 +1214,19 @@
 
             <li class="timeline-item">
 
+              <h4 class="h4 timeline-item-title">코로나19 밀접접촉자 익명 역학조사 시스템</h4>
+
+              <span>Sep. 2020 — Dec. 2020</span>
+
+              <p class="timeline-text">
+                인권 및 사생활침해 문제가 제기된 현재의 코로나19 밀접접촉자 역학조사 파이프라인 개선을 위해 보관되는 개인정보의 주체의 익명성이 보장되는 역학조사 시스템 개발. 
+                논문에서 제안한 BBS(Boneh-Boyen-Shacham) 그룹서명 기반 암호화 기법이 탑재되어 있음.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
               <h4 class="h4 timeline-item-title">RNA-단백질 상호작용</h4>
 
               <span>Apr. 2020 — Oct. 2020</span>
@@ -1373,9 +1401,9 @@
           </p>
 
           <p>
-            My research topic is computer vision and machine learning.
-            To be specific, what I'm interested in is the research field of domain adaptation, genearlization in computer vision,
-            which is to solve the model not to be biased against domain shift environment.
+            My research topic is related to AI(Artificial intelligence), focusing on computer vision and machine learning.
+            To be specific, my research interests lie in the field of domain adaptation and generalization in computer vision. 
+            The goal is to solve the issue of models becoming biased due to shifts in the domain environment.
           </p>
         </section>
 
