modify the expl.

--- a/index.html
+++ b/index.html
@@ -600,8 +600,8 @@
               <span>Sep. 2020 — Dec. 2020</span>
 
               <p class="timeline-text">
-                Project to improve the current contact tracing pipeline for COVID-19, which has raised issues of human rights and privacy infringement. 
-                Our epidemiological investigation system ensures the anonymity of the individuals whose personal information is involved in the investigation. 
+                Project to improve the privacy problem of current contact tracing pipeline for COVID-19. 
+                Our epidemiological investigation system ensures the anonymity of the individuals whose personal information is involved in the process. 
                 The system incorporates an encryption method based on the BBS (Boneh-Boyen-Shacham) group signature, as proposed in our paper.
               </p>
 
