--- a/index.html
+++ b/index.html
@@ -247,10 +247,10 @@
 
               <h4 class="h4 timeline-item-title">KAIST</h4>
 
-              <span>Sep. 2022 — Current</span>
+              <span>Sep. 2022 — Aug. 2024</span>
 
               <p class="timeline-text">
-                School of Computing, <i>4.24 / 4.3</i>
+                M.S in School of Computing, <i>4.24 / 4.3</i>
               </p>
 
             </li>
@@ -262,7 +262,7 @@
               <span>Mar. 2017 — Feb. 2022</span>
 
               <p class="timeline-text">
-                Dept. of Computer Science, <i>Summa Cum Laude</i>
+                B.S in Dept. of Computer Science, <i>Summa Cum Laude</i>
               </p>
 
             </li>
@@ -377,10 +377,21 @@
 
             <li class="timeline-item">
 
+              <h4 class="h4 timeline-item-title">Towards Robustness of Person Search against Corruption</h4>
+
+              <p class="timeline-text">
+                <b>WooJung Son</b>, Yoonki Cho, Guoyuan An, Jinhwan Seo, Sungeui Yoon <br/>
+                NeurIPS 2024 under-review
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
               <h4 class="h4 timeline-item-title">도메인 일반화에서 스타일 매니폴드를 고려한 공분산 기반 스타일 증강기법</h4>
 
               <p class="timeline-text">
-                <b>WooJung Son</b> <br/>
+                <b>WooJung Son</b>, Yoonki Cho, Sungeui Yoon <br/>
                 한국정보과학회 한국컴퓨터종합학술대회 2023
               </p>
               <span class="badge-red">Excellence Paper Award</span>
@@ -866,10 +877,10 @@
 
               <h4 class="h4 timeline-item-title">한국과학기술원(KAIST)</h4>
 
-              <span>Sep. 2022 — 현재</span>
+              <span>Sep. 2022 — Aug. 2024</span>
 
               <p class="timeline-text">
-                전산학부, <i>4.24 / 4.3</i>
+                전산학부 석사, <i>4.24 / 4.3</i>
               </p>
 
             </li>
@@ -881,7 +892,7 @@
               <span>Mar. 2017 — Feb. 2022</span>
 
               <p class="timeline-text">
-                컴퓨터공학과, <i>최우등졸업</i>
+                컴퓨터공학과 학사, <i>최우등졸업</i>
               </p>
 
             </li>
@@ -996,10 +1007,21 @@
 
             <li class="timeline-item">
 
+              <h4 class="h4 timeline-item-title">Towards Robustness of Person Search against Corruption</h4>
+
+              <p class="timeline-text">
+                <b>WooJung Son</b>, Yoonki Cho, Guoyuan An, Jinhwan Seo, Sungeui Yoon <br/>
+                NeurIPS 2024 under-review
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
               <h4 class="h4 timeline-item-title">도메인 일반화에서 스타일 매니폴드를 고려한 공분산 기반 스타일 증강기법</h4>
 
               <p class="timeline-text">
-                <b>손우정</b> <br/>
+                <b>손우정</b>, 조윤기, 윤성의 <br/>
                 한국정보과학회 한국컴퓨터종합학술대회 2023
               </p>
               <span class="badge-red">우수논문상</span>
