--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 
             </li>
 
-            <li class="timeline-item">
+            <!-- <li class="timeline-item">
 
               <h4 class="h4 timeline-item-title">Pusan National University</h4>
 
@@ -265,7 +265,7 @@
                 B.S in Dept. of Computer Science, <i>Summa Cum Laude</i>
               </p>
 
-            </li>
+            </li> -->
 
           </ol>
 
@@ -349,7 +349,7 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Best of the Best 9th</h4>
+              <h4 class="h4 timeline-item-title">Best of the Best 9th, KITRI(Korea Information Technology Research Institute) </h4>
 
               <span>Jul. 2020 — Mar, 2021</span>
 
@@ -555,6 +555,42 @@
           </div>
 
           <ol class="timeline-list">
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Utilizing Gait for Person Re-identification in Video</h4>
+
+              <span>Jan. 2023 — Dec. 2023</span>
+
+              <p class="timeline-text">
+                3rd year lab funding project outsourced by ISC(안보융합원). Utilizing gait information for re-identifying the target of person in the surveillance system.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Using audio data as pretraining for CSI feedback in MIMO Systems</h4>
+
+              <span>Feb. 2023 — Jun. 2023</span>
+
+              <p class="timeline-text">
+                Class Project in Wireless Mobile Internet. Utilized abundant public audio/speech datasets as pretraining data, leveraging their signal-like characteristics. The pretrained AI model showed enhanced performance across network signal processing tasks, particularly in CSI feedback for MIMO systems and modulation classification. Graded as A+.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Generalizable Person Re-identification in Video</h4>
+
+              <span>Aug. 2022 — Dec. 2022</span>
+
+              <p class="timeline-text">
+                2nd year lab funding project outsourced by ISC(안보융합원). Towards generalizable re-id model for unseen environments.
+              </p>
+
+            </li>
 
             <li class="timeline-item">
 
@@ -885,7 +921,7 @@
 
             </li>
 
-            <li class="timeline-item">
+            <!-- <li class="timeline-item">
 
               <h4 class="h4 timeline-item-title">부산대학교</h4>
 
@@ -895,7 +931,7 @@
                 컴퓨터공학과 학사, <i>최우등졸업</i>
               </p>
 
-            </li>
+            </li> -->
 
           </ol>
 
@@ -979,7 +1015,7 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">차세대 보안리더 양성 프로그램 9기</h4>
+              <h4 class="h4 timeline-item-title">차세대 보안리더 양성 프로그램 9기, 한국정보기술연구원(KITRI)</h4>
 
               <span>Jul. 2020 — Mar, 2021</span>
 
@@ -1185,6 +1221,42 @@
           </div>
 
           <ol class="timeline-list">
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">인물의 보행 특성을 활용한 비디오 사람 재식별</h4>
+
+              <span>Jan. 2023 — Dec. 2023</span>
+
+              <p class="timeline-text">
+                안보융합원(ISC) 발주 3차년도 연구실 수주 연구과제. 감시 시스템에서 비디오 사람 재식별을 위해 인물 보행의 특징적 정보를 활용하는 연구.
+              </p>
+
+            </li>
+            
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">다중입출력 네트워크 시스템의 채널 상태 정보 피드백 문제를 위한 오디오 데이터 활용 사전학습</h4>
+
+              <span>Feb. 2023 — Jun. 2023</span>
+
+              <p class="timeline-text">
+                무선이동인터넷 코스웍 프로젝트. 공개 오디오/음성 데이터셋을 학습 데이터로 활용하여 사전학습 모델 구축. 사전학습된 AI 모델은 다중입출력 시스템의 채널 상태 정보 피드백과 변조 분류 등 네트워크 신호 처리 작업에서 향상된 성능을 보임. A+ 학점 취득.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">도메인 일반화 가능한 비디오 사람 재식별</h4>
+
+              <span>Aug. 2022 — Dec. 2022</span>
+
+              <p class="timeline-text">
+                안보융합원(ISC) 발주 2차년도 연구실 프로젝트. 미확인 도메인에서도 적용 가능한 일반화 가능한 비디오 사람 재식별 모델 연구.
+              </p>
+
+            </li>
 
             <li class="timeline-item">
 
